# Nerolith-Platform

./: .gitignore  readme.md
FLOOD-AI/: .env.example  .gitignore  README.md  config.py  dummy.py  main.py  pdf.py  surrogate_pdf.py  test_cascade.py  test_genome.py  test_tick.py
FLOOD-AI/agents/: agent_memory.py  agent_runner.py  alert_agent.py  base_agent.py  coordinator_agent.py  genome_agent.py  region_agent.py  report_agent.py
FLOOD-AI/api/: router.py  websocket.py
FLOOD-AI/cascade/: cascade_agent.py  cascade_engine.py  cascade_nodes.py  cascade_schemas.py  cascade_store.py
FLOOD-AI/core/: data_loader.py  region_registry.py  run_manager.py  schemas.py  session.py
FLOOD-AI/data/: README.md  graph.json  graph_summary.json
FLOOD-AI/engine_bridge/: dll_reader.py  engine_schema.py  grid_parser.py  timestep_listener.py
FLOOD-AI/graph/: genome_schema.py  genome_store.py  graph_query.py  graph_schema.py  graph_storage.py  terrain_graph_builder.py
FLOOD-AI/output/: README.md
FLOOD-AI/services/: alert_router.py  llm_client.py  region_clusterer.py  risk_analyzer.py  snapshot_store.py
FLOOD-AI/tests/: test_api.py  test_coordinator_agent.py  test_engine_bridge.py  test_graph.py  test_region_agent.py  test_report_agent.py
FLOOD-ENGINE/: CMakeLists.txt  main.cpp
FLOOD-ENGINE/algorithms/flood_depth/: CMakeLists.txt  manning.cpp  manning.h  test_manning.cpp
FLOOD-ENGINE/algorithms/flow_accumulation/: test_topo_sort.cpp  topo_sort.cpp  topo_sort.h
FLOOD-ENGINE/algorithms/flow_direction/: CMakeLists.txt  d8.cpp  d8.h  test_d8.cpp
FLOOD-ENGINE/algorithms/infiltration/: CMakeLists.txt  green_ampt.cpp  green_ampt.h  test_green_ampt.cpp
FLOOD-ENGINE/algorithms/ml_correction/: CMakeLists.txt  physics_ml_blend.cpp  physics_ml_blend.h  test_physics_ml_blend.cpp
FLOOD-ENGINE/algorithms/pit_filling/: CMakeLists.txt  test_wang_liu.cpp  wang_liu.cpp  wang_liu.h
FLOOD-ENGINE/algorithms/swe/: CMakeLists.txt  diffusive_wave.cpp  diffusive_wave.h  test_diffusive_wave.cpp
FLOOD-ENGINE/algorithms/terrain_analysis/: CMakeLists.txt  test_twi.cpp  twi.cpp  twi.h
FLOOD-ENGINE/api/: FloodEngineAPI.cpp
FLOOD-ENGINE/core/: blend_integration.cpp  flow_accumulation.cpp  flow_direction.cpp  raster.cpp  raster.h  swe_integration.cpp  timestep_flood.cpp
FLOOD-ENGINE/docs/: Nerolith_2025-2026_Funding_&_Grants_Research_Report.docx
FLOOD-ENGINE/ml/inference/: randomForest.cpp  randomForest.h
FLOOD-ENGINE/ml/models/: ml_features.json  rf_model.txt
FLOOD-ENGINE/ml/training/: plot_error.py  predict_flood_ml.py  train_flood_ml.py
FLOOD-ENGINE/output/: .ninja_deps  .ninja_log  build.ninja  dem3.csv  depth_verify.csv  twi_verify.csv
Flood3D/: CMakeLists.txt  FloodEngineAPI.h  WelcomeScreen.qml  WelcomeWindow.h  WelcomeWindow.ui  dialog.cpp  dialog.h  dialog.ui  flood_ai_sender.h  flood_ai_ws_client.h  floodengineclient.cpp  floodengineclient.h  fragment.frag  intro_window.cpp  intro_window.h  intro_window.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcanvas2d.cpp  mapcanvas2d.h  mapcanvas3d.cpp  mapcanvas3d.h  qml.qrc  rainfall_dialog.cpp  rainfall_dialog.h  rainfall_dialog.ui  resources.qrc  satelliteloop.cpp  satelliteloop.h  vertex.vert
Flood3D/3D/headers/: buildingmesh.h  cameracontroller.h  riskmarker.h  roadnetwork.h  satelitetexture.h  terrainMesh.h  waterlayer.h
Flood3D/3D/mains/: buildingmesh.cpp  cameracontroller.cpp  riskmarker.cpp  roadnetwork.cpp  satelitetexture.cpp  terrainMesh.cpp  waterlayer.cpp
Flood3D/satellite/: divergence_engine.py
FloodEngine/: CMakeLists.txt  Flood_Engine.qmlproject  Flood_Engine.qmlproject.qtds  qds.cmake
NeroSurrogate/: config.py  debug.py  main.py  requirements.txt  speed.py
TerrainApi/: 1.ps1
(+99 files in other folders)
